home2-rest/deploy/live/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-api
  namespace: home
  labels:
    app: home
    type: api
spec:
  selector:
    app: home
    type: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
