home2-rest/deploy/live/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-api
  namespace: home
  labels:
    app: home-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
      - jtalk.me
      secretName: home-certificate
    - hosts:
      - www.jtalk.me
      secretName: www-home-certificate
  rules:
    - host: jtalk.me
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-api
                port:
                  number: 80
    - host: www.jtalk.me
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-api
                port:
                  number: 80
